# bank-operations

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: transactions.json
src/: currency_converter.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_currency_converter.py  test_decorators.py  test_external_api.py  test_generators  test_generators.py  test_masking.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
